--- a/src/app/styles/ui.css
+++ b/src/app/styles/ui.css
@@ -21,6 +21,7 @@ button {
 input {
     border: none;
     outline: none;
+    border-bottom: 1px solid #18a0fb;
     padding: 8px;
 }
 input:hover {
@@ -34,4 +35,16 @@ button:focus {
 }
 input:focus {
     box-shadow: inset 0 0 0 2px #18a0fb;
+}
+
+.logos {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    gap: 12px;
+}
+.logos > img {
+    width: 30px;
+    height: 30px;
 }
