--- a/src/app/styles/ui.css
+++ b/src/app/styles/ui.css
@@ -17,6 +17,7 @@ button {
     box-shadow: none;
     background: #18a0fb;
     color: white;
+    cursor: pointer;
 }
 input {
     border: none;
@@ -32,6 +33,10 @@ button:focus {
 }
 #create:focus {
     box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.3);
+}
+#create:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
 }
 input:focus {
     box-shadow: inset 0 0 0 2px #18a0fb;
