--- a/src/app/styles/ui.css
+++ b/src/app/styles/ui.css
@@ -23,10 +23,11 @@ input {
     border: none;
     outline: none;
     border-bottom: 1px solid #18a0fb;
-    padding: 8px;
+    margin-bottom: 8px;
 }
+
 input:hover {
-    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+    box-shadow: none;
 }
 button:focus {
     box-shadow: inset 0 0 0 2px #18a0fb;
@@ -39,7 +40,9 @@ button:focus {
     cursor: not-allowed;
 }
 input:focus {
-    box-shadow: inset 0 0 0 2px #18a0fb;
+    /* box-shadow: inset 0 0 0 2px #18a0fb;*/
+    box-shadow: none;
+    border-bottom: 2px solid #1274b6;
 }
 
 .logos {
@@ -73,7 +76,25 @@ input:focus {
     border-left-color: rgba(245, 40, 145, 0.8);
     animation: spinner-anim 0.8s linear infinite;
 }
-
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+}
+.pixel {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 2px;
+}
+.prefix {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 6px;
+}
 @keyframes spinner-anim {
     0% {
         transform: rotate(0);
