--- a/src/app/styles/ui.css
+++ b/src/app/styles/ui.css
@@ -10,14 +10,19 @@ button {
     border: none;
     padding: 8px 15px;
     margin: 0 5px;
-    box-shadow: inset 0 0 0 1px black;
     outline: none;
+    box-shadow: 0 1px 2px rgb(0 0 0 / 19%), 0 2px 2px rgb(0 0 0 / 23%);
+}
+button:hover {
+    box-shadow: 0 2px 3px rgb(0 0 0 / 19%), 0 3px 3px rgb(0 0 0 / 23%);
 }
 #create {
-    box-shadow: none;
     background: #18a0fb;
     color: white;
     cursor: pointer;
+}
+#create:hover {
+    background: #1480c7;
 }
 input {
     border: none;
@@ -65,7 +70,27 @@ input:focus {
     top: 50%;
     transform: translate(-50%, -50%);
 }
-
+.inputs {
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 10px;
+}
+.buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.buttons > .close {
+    background-color: #b80909;
+    border: none;
+    color: white;
+}
+.buttons > .close:hover {
+    background-color: #a00202;
+    /*box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);*/
+}
 .simple-spinner span {
     display: block;
     width: 30px;
@@ -111,8 +136,8 @@ input:focus {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 6px;
 }
+
 @keyframes spinner-anim {
     0% {
         transform: rotate(0);
